Form and index UI changed, created note and folder model, fixed height double scroll

--- a/src/app/components/index/index.component.css
+++ b/src/app/components/index/index.component.css
@@ -1,26 +1,61 @@
 /* FORM */
-.formNote{
+.formNote {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin-top: 20px;
 }
 
-.formNote #writeIcon{
+.formNote .formNoteBox{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+    box-shadow: 0px 0px 5px gray;
+    padding: 15px 15px 0px 15px;
+    border-radius: 10px;
+}
+
+.formNote .formNoteBox #writeIcon{
     height: 40px;
     width: 40px;
     margin-top: 7px;
 }
 
-.formNote form{
+.formNote .formNoteBox form{
     display: flex;
     flex-direction: column;
     width: 400px;
 }
 
-.formNote form .options{
+.formNote .formNoteBox form .hidden {
+    padding-bottom: 15px;
+}
+
+.formNote .formNoteBox form .hidden mat-form-field{
+    width: 100%;
+}
+
+.formNote .formNoteBox form .options{
     display: flex;
     justify-content: space-between;
+}
+
+.formNote .formNoteBox form .options .optionsButtons{
+    border: none;
+    background-color: #F9F9F9;
+    padding: 5px;
+}
+
+.formNote .formNoteBox form .options .optionsButtons:hover{
+    background-color: #9A9A9A;
+    border-radius: 20px;
+    
+}
+
+.formNote .formNoteBox form .options #submit{
+    background-color: #fae900;
+    font-weight: bold;
 }
 
 /* MAIN */
@@ -49,8 +84,9 @@ mat-grid-list{
     width: 450px;
     height: 300px;
     margin: 20px;
-    padding: 40px;
+    padding: 30px 40px 10px 40px;
     border-bottom-right-radius: 30px;
+    box-shadow: 0px 0px 8px gray;
 }
 
 .note .noteTitle{
@@ -59,8 +95,19 @@ mat-grid-list{
     align-items: center;
 }
 
+.note .noteTitle button mat-icon{
+    width: 10px;
+    border-radius: 30px;
+}   
+
+.note .noteTitle button:hover{
+    background-color: #0000003a;
+
+}
+
 .note .noteBody{
     width: 250px; 
     height: 200px; 
     overflow: auto;
 }
+
