--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -84,7 +84,7 @@
 
 /* @@@@@@@@@@  SIDENAV  @@@@@@@@@ */
 mat-sidenav-container{
-    height: 100%;
+    height: auto;
 }
 
 mat-sidenav{
